nosql-client/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nosql-client
  namespace: dev-srd
spec:
  selector:
    app: nosql
  ports:
  - name: nosql
    port: 3000
    targetPort: 3000 # <-- Đảm bảo khớp với containerPort
